# docker_compose_tui

./: .bumpversion.cfg  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  docker-compose.yaml  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
docker_compose_tui/: __init__.py  columns.py  docker_compose_tui.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  test_docker_compose_tui.py
