[tool]
[tool.poetry]
name = "docker_compose_tui"
version = "0.1.0"
homepage = "https://github.com/shumbashi/docker_compose_tui"
description = "Top-level package for Docker Compose TUI."
authors = ["Ahmed Shibani <sheipani@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "docker_compose_tui" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
textual = "^0.1.12"
rich = "^10.12.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
